flang/test/Semantics/implicit08.f90
! RUN: %python %S/test_errors.py %s %flang_fc1
subroutine s1
  block
    !ERROR: IMPLICIT statement is not allowed in a BLOCK construct
    implicit logical(a)
  end block
end subroutine
